fixed overflow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,8 +14,14 @@
   color: rgba(0, 0, 0, 0.87);
 }
 
-::ng-deep .mat-drawer-content {
-  overflow: hidden !important;
+::ng-deep {
+  .mat-drawer-content {
+    overflow: hidden !important;
+  }
+
+  .mat-drawer-inner-container {
+    overflow: hidden !important;
+  }
 }
 
 .drawer {
